# octetos-db-abstract

./: .gitignore  INSTALL  Makefile.am  builder.iss  configure.ac  linux.cbp  mingw64.cbp  octetos-db-abstract.cbp  pom.xml
src/: Makefile.am  clientdb.cc  clientdb.hh  config-cb.h  octetos-db-abstract.pc.in
src/main/java/octetos/db/: Connector.java  Datconnect.java  Datresult.java  Driver.java
