
AC_INIT(octetos-db-abstract, 0.1.2-alpha,azael.devel@gmail.com)

AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.11])

AM_SILENT_RULES([yes])

AC_PROG_CXX
AC_PROG_LIBTOOL







LT_INIT


PKG_CHECK_MODULES(OCTETOS_CORE, octetos-core)




AC_OUTPUT([
Makefile
src/Makefile
src/octetos-db-abstract.pc
])
